UIの大幅変更やMarkDown構文の対応

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <title>Web To Discord</title>
 </head>
 <body>
+  <h1>Web To Discord v2.0</h1>
     <select id="endpointSelect">
       <option value="YOUR_CHANNEL_ID">YOUR_CHANNEL_NAME</option>
       <option value="YOUR_CHANNEL_ID">YOUR_CHANNEL_NAME</option>
@@ -14,19 +15,30 @@
 <div id="messages"></div>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
-  const initialEndpoint = 'http://localhost:3001/1221415572043075594'; // 初期のAPIエンドポイント
+  const initialEndpoint = 'http://localhost:3001/YOUR_CHANNEL_ID';
   fetchData(initialEndpoint);
 
-  // プルダウンメニューの要素を取得
   const select = document.getElementById("endpointSelect");
 
-  // プルダウンメニューが変更されたときのイベントリスナーを追加
   select.addEventListener("change", function() {
     const selectedValue = select.value;
     const apiEndpoint = `http://localhost:3001/${selectedValue}`;
     fetchData(apiEndpoint);
   });
 });
+
+// Markdownの構文をHTMLに変換する関数
+let convertMarkdownToHTML = function(text) {
+  // 強調
+  text = text.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
+  // 斜体
+  text = text.replace(/\*(.*?)\*/g, '<em>$1</em>');
+  // 打ち消し線
+  text = text.replace(/~~(.*?)~~/g, '<del>$1</del>');
+  // インラインコード
+  text = text.replace(/`(.*?)`/g, '<code>$1</code>');
+  return text;
+};
 
 // データを取得してHTMLを生成する関数
 function fetchData(apiEndpoint) {
@@ -38,20 +50,21 @@ function fetchData(apiEndpoint) {
       return response.json();
     })
     .then(data => {
-      // 既存のHTMLを削除
       const existingHtml = document.getElementById("messages");
       existingHtml.innerHTML = "";
 
       data.forEach(message => {
-        const content = message.content.replace(/["'<>]/g, function(char) {
+        let content = message.content.replace(/["'<>]/g, function(char) {
           return {
             '"': '&quot;',
             "'": '&#039;',
             '<': '&lt;',
             '>': '&gt;'
           }[char];
-        });
-
+        }).replace(/\n/g, '<br>'); // 改行文字を<br>タグに置換
+        
+        content = convertMarkdownToHTML(content);
+        
         const imageUrl = message.imageUrl ? `<br><img src="${message.imageUrl}" width="300" height="auto"></img>` : '';
 
         const timestamp = new Date(message.timestamp);
@@ -60,20 +73,16 @@ function fetchData(apiEndpoint) {
           <div>
             <div style="display: flex; align-items: center; margin-bottom: 8px;">
               <img src="${message.author.avatarUrl}" alt="Avatar" style="width: 24px; height: 24px; border-radius: 50%; margin-right: 8px; cursor: pointer;" onclick="fillTextarea('<@${message.author.id}>')">
-              <strong>投稿者:</strong> ${message.author.username}
+              ${message.author.username} &nbsp;&nbsp;<p class="half-size">${timestamp.getFullYear()}/${(timestamp.getMonth() + 1).toString().padStart(2, '0')}/${timestamp.getDate().toString().padStart(2, '0')} ${timestamp.getHours().toString().padStart(2, '0')}:${timestamp.getMinutes().toString().padStart(2, '0')}:${timestamp.getSeconds().toString().padStart(2, '0')}</p>
             </div>
             <div style="margin-left: 32px;">
-              <strong>ユーザーID:</strong> ${message.author.id} <br>
-              <strong>内容:</strong> ${content} ${imageUrl} <br>
-              <strong>投稿日時:</strong> ${timestamp.getFullYear()}-${(timestamp.getMonth() + 1).toString().padStart(2, '0')}-${timestamp.getDate().toString().padStart(2, '0')} ${timestamp.getHours().toString().padStart(2, '0')}:${timestamp.getMinutes().toString().padStart(2, '0')}:${timestamp.getSeconds().toString().padStart(2, '0')}
-              <a href="edit.php?messageId=${message.messageId}">編集</a>/
-              <a href="delete.php?messageId=${message.messageId}">削除</a>
+               ${content} ${imageUrl} <br>
             </div>
           </div>
-          <hr>
+          <br>
         `;
 
-        // 既存のHTMLに追加
+
         existingHtml.innerHTML += html;
       });
     })
